force-app/main/default/objects/Lead_Team__c/Lead_Team__c.object-meta.xml
<CustomObject>
    <label>Lead Team</label>
    <nameField>
        <displayFormat>LET-{0000}</displayFormat>
        <label>Lead Team Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Teams</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>