force-app/main/default/objects/Lead_Team__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Lead Team</relationshipLabel>
    <relationshipName>Lead_Teams</relationshipName>
    <type>Lookup</type>
</CustomField>