force-app/main/default/objects/Lead_Team__c/fields/Lead_Access__c.field-meta.xml
<CustomField>
    <fullName>Lead_Access__c</fullName>
    <label>Lead Access</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lead_Access</valueSetName>
    </valueSet>
</CustomField>